--- a/login.html
+++ b/login.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>大事件-注册-登录</title>
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="/assets/css/login_back.css">
 </head>
+
 <body>
-    
+    <!-- 版心 -->
+    <div class="layui-main">
+        <div class="contaniner">
+            <!-- 登录 -->
+            <form class="layui-form" action="">
+                <div class="layui-form-item">
+                    <input type="text" name="title" required lay-verify="required" placeholder="请输入标题"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <form class="layui-form" action="">
+                    <div class="layui-form-item">
+                        <input type="text" name="title" required lay-verify="required" placeholder="请输入标题"
+                            autocomplete="off" class="layui-input">
+                    </div>
+                    <form class="layui-form" action="">
+                        <div class="layui-form-item">
+                            <button type="button" class="layui-btn layui-btn-fluid">流体按钮（最大化适应）</button>
+                        </div>
+                        <form class="layui-form" action="">
+                            <div class="layui-form-item">
+                                <input type="text" name="title" required lay-verify="required" placeholder="请输入标题"
+                                    autocomplete="off" class="layui-input">
+                            </div>
+        </div>
+    </div>
+    <script src="/assets/lib/jquery.js"></script>
+    <script src="/assets/lib/layui/layui.all.js"></script>
 </body>
+
 </html>
